fix z-index issue

--- a/css/style.css
+++ b/css/style.css
@@ -262,6 +262,7 @@ body {
       background-image: url("../img/nat-5.jpg"); }
   .card__heading {
     font-size: 2.8rem;
+    z-index: 1;
     font-weight: 300;
     text-transform: uppercase;
     color: #fff;
