--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -69,6 +69,7 @@
 
   &__heading {
     font-size: 2.8rem;
+    z-index: 1;
     font-weight: 300;
     text-transform: uppercase;
     color: $color-white;
